--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,45 @@
   <title>Blog</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+   <%= stylesheet_link_tag 'application', 'http://fonts.googleapis.com/css?family=Raleway:400,700' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div id="sidebar">
+<div id="logo">
+  <%= link_to root_path do %>
+  <%= image_tag "logo.png" %>
+  <% end %>
+  </div>
+
+  <ul>
+    <li class="category">Website</li>
+    <li><%= link_to "Blog", root_path %></li>
+    <li>About</li>
+  </ul>
+  <ul>
+    <li class="category">Social</li>
+    <li><a href="https://www.facebook.com/andrian.gretsko">Facebook</a></li>
+    <li><a href="https://github.com/grek-andrian">Git-hub</a></li>
+    <li><a href="mailto:gretsko.andrian@gmail.com">Email</a></li>
+  </ul>
+  <p class="sign_in"> Admin Login </p>
+</div>
+
+<div id="main_content">
+  <div id="header">
+<p>  All Posts</p>
+<div class="buttons">
+   <button class="button"> <%= link_to "New Post", new_post_path %></button>
+  <button class="button">Log out</button>
+</div>
+  </div>
+
+  <%= flash.each do |name, msg| %>
+  <%= content_tag(:div, msg, class: "alert") %>
+  <% end %>
 
 <%= yield %>
-
+</div>
 </body>
 </html>
