--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,4 @@
+<div class="page_wrapper">
 <h1>New Post</h1>
 <%= form_for :post, url: posts_path do |f| %>
   <p>
@@ -14,3 +15,4 @@
     <%= f.submit %>
   </p>
 <% end %>
+</div>
