--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,4 @@
+<div class="post_content">
 <h1 class="title">
 <%= @post.title %>
 </h1>
@@ -7,3 +8,4 @@ Submitted: <%= time_ago_in_words(@post.created_at) %> ago
 <p class="body">
   <%= @post.body %>
 </p>
+</div>
