--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,16 +31,17 @@
 
 <div id="main_content">
   <div id="header">
-<p>  All Posts</p>
-<div class="buttons">
-   <button class="button"> <%= link_to "New Post", new_post_path %></button>
-  <button class="button">Log out</button>
-</div>
-  </div>
+<p>All Posts</p>
 
-  <%= flash.each do |name, msg| %>
-  <%= content_tag(:div, msg, class: "alert") %>
-  <% end %>
+  <div class="buttons">
+        <%= link_to "New Post", new_post_path, class: "button" %>
+         <button class="button">Log Out</button>
+
+  </div>
+</div>
+    <% flash.each do |name, msg| %>
+			<%= content_tag(:div, msg, class: "alert") %>
+		<% end %>
 
 <%= yield %>
 </div>
