--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,4 +10,10 @@ Submitted: <%= time_ago_in_words(@post.created_at) %> ago
 <p class="body">
   <%= @post.body %>
 </p>
+<div id="comments">
+  <h2><%= @post.comments.count %> comments</h2>
+  <%= render @post.comments %>
+  <h3>Add a comment:</h3>
+  <%= render "comments/form"  %>  
+</div>
 </div>
