--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,8 +4,10 @@
 </h1>
 <p class="date">
 Submitted: <%= time_ago_in_words(@post.created_at) %> ago
+<% if user_signed_in? %>
 | <%= link_to "Edit", edit_post_path(@post) %>
 | <%= link_to "Delete", post_path(@post), method: :delete, data: {confirm: "Are you sure?"} %>
+<% end %>
 </p>
 <p class="body">
   <%= @post.body %>
@@ -14,6 +16,6 @@ Submitted: <%= time_ago_in_words(@post.created_at) %> ago
   <h2><%= @post.comments.count %> comments</h2>
   <%= render @post.comments %>
   <h3>Add a comment:</h3>
-  <%= render "comments/form"  %>  
+  <%= render "comments/form"  %>
 </div>
 </div>
